services/services-deployment-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-add-tweet
spec:
  selector:
    app: admin-add
    version: one
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-add-tweet-deployment-v1
spec:
  selector:
    matchLabels:
      app: admin-add
      version: one
  replicas: 3
  template:
    metadata:
      labels:
        app: admin-add
        version: one
    spec:
      containers:
      - name: admin-add
        image: "europe-west4-docker.pkg.dev/cadeira-nuvem-2122/services/admin-add-tweet:latest"
        volumeMounts:
        - name: bigquery-key
          mountPath: /var/secrets/bigquery
      volumes:
        - name: bigquery-key
          secret:
            secretName: bigquery-key
---
apiVersion: v1
kind: Service
metadata:
  name: admin-delete-tweet
spec:
  selector:
    app: admin-delete
    version: one
  ports:
  - protocol: TCP
    port: 50052
    targetPort: 50052
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-delete-tweet-deployment-v1
spec:
  selector:
    matchLabels:
      app: admin-delete
      version: one
  replicas: 3
  template:
    metadata:
      labels:
        app: admin-delete
        version: one
    spec:
      containers:
      - name: admin-delete
        image: "europe-west4-docker.pkg.dev/cadeira-nuvem-2122/services/admin-delete-tweet:latest"
        volumeMounts:
        - name: bigquery-key
          mountPath: /var/secrets/bigquery
      volumes:
        - name: bigquery-key
          secret:
            secretName: bigquery-key
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: auth
    version: one
  ports:
  - protocol: TCP
    port: 50000
    targetPort: 50000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment-v1
spec:
  selector:
    matchLabels:
      app: auth
      version: one
  replicas: 3
  template:
    metadata:
      labels:
        app: auth
        version: one
    spec:
      containers:
      - name: auth
        image: "europe-west4-docker.pkg.dev/cadeira-nuvem-2122/services/auth:latest"
        volumeMounts:
        - name: bigquery-key
          mountPath: /var/secrets/bigquery
      volumes:
        - name: bigquery-key
          secret:
            secretName: bigquery-key
