services/services-deployment-list.yaml
apiVersion: v1
kind: Service
metadata:
  name: list-tweet-language
spec:
  selector:
    app: list-tweet-lang
    version: one
  ports:
  - protocol: TCP
    port: 50081
    targetPort: 50081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: list-tweet-language-deployment-v1
spec:
  selector:
    matchLabels:
      app: list-tweet-lang
      version: one
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: list-tweet-lang
        version: one
    spec:
      containers:
      - name: list-tweet-lang
        image: "europe-west4-docker.pkg.dev/cadeira-nuvem-2122/services/list-tweet-language:latest"
        volumeMounts:
        - name: bigquery-key
          mountPath: /var/secrets/bigquery
      volumes:
        - name: bigquery-key
          secret:
            secretName: bigquery-key
---
apiVersion: v1
kind: Service
metadata:
  name: list-tweet-location
spec:
  selector:
    app: list-tweet-loc
    version: one
  ports:
  - protocol: TCP
    port: 50082
    targetPort: 50082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: list-tweet-location-deployment-v1
spec:
  selector:
    matchLabels:
      app: list-tweet-loc
      version: one
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: list-tweet-loc
        version: one
    spec:
      containers:
      - name: list-tweet-loc
        image: "europe-west4-docker.pkg.dev/cadeira-nuvem-2122/services/list-tweet-location:latest"
        volumeMounts:
        - name: bigquery-key
          mountPath: /var/secrets/bigquery
      volumes:
        - name: bigquery-key
          secret:
            secretName: bigquery-key
---
apiVersion: v1
kind: Service
metadata:
  name: list-tweet-random
spec:
  selector:
    app: list-tweet-rand
    version: one
  ports:
  - protocol: TCP
    port: 50083
    targetPort: 50083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: list-tweet-random-deployment-v1
spec:
  selector:
    matchLabels:
      app: list-tweet-rand
      version: one
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: list-tweet-rand
        version: one
    spec:
      containers:
      - name: list-tweet-rand
        image: "europe-west4-docker.pkg.dev/cadeira-nuvem-2122/services/list-tweet-random:latest"
        volumeMounts:
        - name: bigquery-key
          mountPath: /var/secrets/bigquery
      volumes:
        - name: bigquery-key
          secret:
            secretName: bigquery-key
---
apiVersion: v1
kind: Service
metadata:
  name: list-tweet-search
spec:
  selector:
    app: list-tweet-sch
    version: one
  ports:
  - protocol: TCP
    port: 50084
    targetPort: 50084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: list-tweet-search-deployment-v1
spec:
  selector:
    matchLabels:
      app: list-tweet-sch
      version: one
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: list-tweet-sch
        version: one
    spec:
      containers:
      - name: list-tweet-sch
        image: "europe-west4-docker.pkg.dev/cadeira-nuvem-2122/services/list-tweet-search:latest"
        volumeMounts:
        - name: bigquery-key
          mountPath: /var/secrets/bigquery
      volumes:
        - name: bigquery-key
          secret:
            secretName: bigquery-key
---
apiVersion: v1
kind: Service
metadata:
  name: list-tweet-username
spec:
  selector:
    app: list-tweet-user
    version: one
  ports:
  - protocol: TCP
    port: 50085
    targetPort: 50085
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: list-tweet-username-deployment-v1
spec:
  selector:
    matchLabels:
      app: list-tweet-user
      version: one
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: list-tweet-user
        version: one
    spec:
      containers:
      - name: list-tweet-user
        image: "europe-west4-docker.pkg.dev/cadeira-nuvem-2122/services/list-tweet-username:latest"
        volumeMounts:
        - name: bigquery-key
          mountPath: /var/secrets/bigquery
      volumes:
        - name: bigquery-key
          secret:
            secretName: bigquery-key
---
apiVersion: v1
kind: Service
metadata:
  name: clear-tweet-list-svc
spec:
  selector:
    app: clear-tweet
    version: one
  ports:
  - protocol: TCP
    port: 50060
    targetPort: 50060
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clear-tweet-list-deployment-v1
spec:
  selector:
    matchLabels:
      app: clear-tweet
      version: one
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: clear-tweet
        version: one
    spec:
      containers:
      - name: clear-tweet
        image: "europe-west4-docker.pkg.dev/cadeira-nuvem-2122/services/clear-tweet-list:latest"
        volumeMounts:
        - name: bigquery-key
          mountPath: /var/secrets/bigquery
      volumes:
        - name: bigquery-key
          secret:
            secretName: bigquery-key
