services/template_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: HOST_IP.nip.io
    http:
      paths:
      - path: /add-tweet
        pathType: Prefix
        backend:
          service:
            ## Service manifest in the random service folder
            name: admin-add-tweet
            port:
              number: 50051
      - path: /delete-tweet
        pathType: Prefix
        backend:
          service:
            ## Service manifest in the random service folder
            name: admin-delete-tweet
            port:
              number: 50052
      - path: /list-tweet-language
        pathType: Prefix
        backend:
          service:
            ## Service manifest in the random service folder
            name: list-tweet-language
            port:
              number: 50081
      - path: /list-tweet-location
        pathType: Prefix
        backend:
          service:
            ## Service manifest in the random service folder
            name: list-tweet-location
            port:
              number: 50082
      - path: /list-tweet-random
        pathType: Prefix
        backend:
          service:
            ## Service manifest in the random service folder
            name: list-tweet-random
            port:
              number: 50083
      - path: /list-tweet-search
        pathType: Prefix
        backend:
          service:
            ## Service manifest in the random service folder
            name: list-tweet-search
            port:
              number: 50084
      - path: /list-tweet-username
        pathType: Prefix
        backend:
          service:
            ## Service manifest in the random service folder
            name: list-tweet-username
            port:
              number: 50085
